# jira_mcp

./: .env.example  .gitignore  CLAUDE.md  README.md  create-worktree.sh  pyproject.toml
.claude/commands/: commit-and-push.md  decompose-issue.md
src/jira_mcp/: __init__.py  client.py  config.py  server.py
tests/: __init__.py  conftest.py  test_client.py  test_config.py  test_server.py
